Fixes overflowing chat container height

--- a/server/scss/_chat.scss
+++ b/server/scss/_chat.scss
@@ -46,6 +46,7 @@
   border-radius: 5px;
   color: #FFFFFF;
   flex: 0 0 400px;
+  height: 100vh;
   position: relative;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
